@@ -29,10 +29,10 @@ public interface CategoryMapper {
     default PageResponse<CategoryResponse> toPageResponse(Page<Category> page) {
         List<CategoryResponse> list = page.getContent().stream()
                 .map(this::toResponse)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
 
         PaginationResponse pagination = PaginationResponse.builder()
-                .currentPage(page.getNumber())
+                .currentPage(page.getNumber() + 1)
                 .totalPages(page.getTotalPages())
                 .totalElements(page.getTotalElements())
                 .pageSize(page.getSize())
